refactor: fjern RSA-kryptering av ident
Ident sendes nå i klartekst som query-parameter. TLS gir tilstrekkelig
transportkryptering. Fjerner SecretService, /keys-endepunkt og all
dekrypteringslogikk.
